Fix new vertical align not working fixes https://github.com/Codeinwp/otter-blocks/issues/837

--- a/src/blocks/blocks/section/style.scss
+++ b/src/blocks/blocks/section/style.scss
@@ -66,7 +66,8 @@
 
 @media ( min-width: 600px ) {
 	.wp-block-themeisle-blocks-advanced-columns {
-		&.has-vertical-flex-start {
+		&.has-vertical-flex-start,
+		&.has-vertical-top {
 			.innerblocks-wrap {
 				align-items: flex-start;
 			}
@@ -78,7 +79,8 @@
 			}
 		}	
 
-		&.has-vertical-flex-end {
+		&.has-vertical-flex-end,
+		&.has-vertical-bottom {
 			.innerblocks-wrap {
 				align-items: flex-end;
 			}
